making the pokemon config menu not require a restart

--- a/lovely/joker_functionality.toml
+++ b/lovely/joker_functionality.toml
@@ -236,9 +236,9 @@ pattern = '''
 '''
 position = "before"
 payload = '''
-if (SMODS.Mods["PokermonMaelmc"] or {}).can_load and (SMODS.Mods["NachosPokermonDip"] or {}).can_load and nacho_config.ralts then
+if (SMODS.Mods["NachosPokermonDip"] or {}).can_load and nacho_config.ralts then
   local yoink_ralts = assert(SMODS.load_file("src/pokemon/0280_ralts.lua", "NachosPokermonDip"))()
-  if yoink_ralts.enabled then yoink_ralts:init() end
+  yoink_ralts:yoink()
 end
 
 '''
