gallade level up card null check

--- a/lovely/joker_functionality.toml
+++ b/lovely/joker_functionality.toml
@@ -14,7 +14,7 @@ function level_up_hand(card, hand, instant, amount)
 '''
 position = "after"
 payload = '''
-    if next(SMODS.find_card('j_nacho_gallade')) and card.ability and card.ability.set == 'Planet' then
+    if next(SMODS.find_card('j_nacho_gallade')) and card and card.ability and card.ability.set == 'Planet' then
         return true
     end
 '''
