--- a/lovely/joker_functionality.toml
+++ b/lovely/joker_functionality.toml
@@ -171,6 +171,41 @@ end
 '''
 match_indent = true
 
+# Passimian Copy Card fix?
+[[patches]]
+[patches.pattern]
+target = "functions/common_events.lua"
+pattern = '''
+for k, v in pairs(other.ability) do
+    if type(v) == 'table' then 
+        new_card.ability[k] = copy_table(v)
+    else
+        new_card.ability[k] = v
+    end
+end
+'''
+position = "at"
+payload = '''
+if other.config.center.name == "passimian" then
+  if other.ability.received_card then
+    new_card:set_ability(other.config.center)
+    new_card.config.center:receive_card(new_card, other.ability.received_card.key)
+  end
+  goto continue
+end
+
+for k, v in pairs(other.ability) do
+    if type(v) == 'table' then 
+        new_card.ability[k] = copy_table(v)
+    else
+        new_card.ability[k] = v
+    end
+end
+
+::continue::
+'''
+match_indent = true
+
 
 ### Terapagos
 # Ensuring that Terapagos-Stellar makes Pokemon always Tera Stellar
