--- a/lovely/joker_functionality.toml
+++ b/lovely/joker_functionality.toml
@@ -242,6 +242,31 @@ item_key = "c_"..prefix.."_"..v.config.center.item_req
 '''
 match_indent = true
 
+[[patches]]
+[patches.pattern]
+target = '=[SMODS Pokermon "boosters/packs1.lua"]'
+pattern = '''
+for k, v in pairs(self.config.c_keys) do
+  if v == item_key then
+    already_created = true
+  end
+end
+'''
+position = "after"
+payload = '''
+local item_family
+for _, family in pairs(PkmnDip.item_families) do if PkmnDip.utils.contains(family, item_key) then item_family = family end end
+if item_family then
+  for _, item in pairs(item_family) do  
+    for k, v in pairs(self.config.c_keys) do
+      if v == item then already_created = true end
+    end
+    if next(SMODS.find_card(item)) then already_created = true end
+  end
+end
+'''
+match_indent = true
+
 
 ### Terapagos
 # Ensuring that Terapagos-Stellar makes Pokemon always Tera Stellar
