--- a/lovely/stellar_type.toml
+++ b/lovely/stellar_type.toml
@@ -104,7 +104,7 @@ match_indent = true
 [patches.pattern]
 target = '=[SMODS Pokermon "functions/energyfunctions.lua"]'
 pattern = '''
-local poketype_list = {"grass", "fire", "water", "lightning", "psychic", "fighting", "colorless", "dark", "metal", "fairy", "dragon", "earth"}
+local poketype_list = {"grass", "fire", "water", "lightning", "psychic", "fighting", "colorless", "dark", "metal", "fairy", "dragon", "earth", "bird"}
 '''
 position = "after"
 payload = '''
