passimian energy patches fix

--- a/lovely/passimian.toml
+++ b/lovely/passimian.toml
@@ -59,7 +59,7 @@ match_indent = true
 [patches.pattern]
 target = '=[SMODS Pokermon "functions/energyfunctions.lua"]'
 pattern = '''
-if (card.ability.extra.ptype ~= "Colorless" and not card.ability.colorless_sticker) and etype == "Colorless" then
+if not G.GAME.modifiers.disable_colorless_penalty and (card.ability.extra.ptype ~= "Colorless" and not card.ability.colorless_sticker) and etype == "Colorless" then
   card.ability.extra[name] = data + (card.config.center.config.extra[name] * addition/2) * (card.ability.extra.escale or 1)
 else
   card.ability.extra[name] = data + (card.config.center.config.extra[name] * addition) * (card.ability.extra.escale or 1)
@@ -68,13 +68,13 @@ end
 position = "at"
 payload = '''
 if card.config.center.key == 'j_nacho_passimian' then
-  if (card.ability.extra.ptype ~= "Colorless" and not card.ability.colorless_sticker) and etype == "Colorless" then
+  if not G.GAME.modifiers.disable_colorless_penalty and (card.ability.extra.ptype ~= "Colorless" and not card.ability.colorless_sticker) and etype == "Colorless" then
     card.ability.extra[name] = data + (card.ability.received_card.config.extra[name] * addition/2) * (card.ability.extra.escale or 1)
   else
     card.ability.extra[name] = data + (card.ability.received_card.config.extra[name] * addition) * (card.ability.extra.escale or 1)
   end
 else
-  if (card.ability.extra.ptype ~= "Colorless" and not card.ability.colorless_sticker) and etype == "Colorless" then
+  if not G.GAME.modifiers.disable_colorless_penalty and (card.ability.extra.ptype ~= "Colorless" and not card.ability.colorless_sticker) and etype == "Colorless" then
     card.ability.extra[name] = data + (card.config.center.config.extra[name] * addition/2) * (card.ability.extra.escale or 1)
   else
     card.ability.extra[name] = data + (card.config.center.config.extra[name] * addition) * (card.ability.extra.escale or 1)
@@ -172,13 +172,13 @@ end
 position = "at"
 payload = '''
 if card.config.center.key == 'j_nacho_passimian' then
-  if (card.ability.extra.ptype ~= "Colorless" and not card.ability.colorless_sticker) and etype == "Colorless" then
+  if not G.GAME.modifiers.disable_colorless_penalty and (card.ability.extra.ptype ~= "Colorless" and not card.ability.colorless_sticker) and etype == "Colorless" then
     card.ability.extra[name] = data + (card.ability.received_card.config.extra[name] * addition/2) * (card.ability.extra.escale or 1)
   else
     card.ability.extra[name] = data + (card.ability.received_card.config.extra[name] * addition) * (card.ability.extra.escale or 1)
   end
 else
-  if (card.ability.extra.ptype ~= "Colorless" and not card.ability.colorless_sticker) and etype == "Colorless" then
+  if not G.GAME.modifiers.disable_colorless_penalty and (card.ability.extra.ptype ~= "Colorless" and not card.ability.colorless_sticker) and etype == "Colorless" then
     card.ability.extra[name] = data + (card.config.center.config.extra[name] * addition/2) * (card.ability.extra.escale or 1)
   else
     card.ability.extra[name] = data + (card.config.center.config.extra[name] * addition) * (card.ability.extra.escale or 1)
